--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
-<!-- Brand namw and quicklinks to avalible articles -->
+<!-- Brand name and quicklinks to avalible articles -->
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
