spell check complete

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
-<!-- Brand name and quicklinks to avalible articles -->
+<!-- Brand name and quick links to available articles -->
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -27,7 +27,7 @@
     <!-- Named the image of people sitting at a table a figure  -->
     <figure class="hero"></figure>
     
-    <!-- consolidated div into section and named the imforation below articles -->
+    <!-- consolidated div into section and named the information below articles -->
     <section class="content">
         <article id="search-engine-optimization" class="info">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
